crates/rongroi-collectors/tests/snapshots/report_snapshot__evtx_logs_present_ss_view.snap
---
source: crates/rongroi-collectors/tests/report_snapshot.rs
expression: view
---
{
  "mode": "ss",
  "header": {
    "schema_version": 1,
    "provenance": {
      "official": false,
      "version": "0.0.0-test",
      "commit": null,
      "exe_sha256": null
    },
    "rules_bundle": {
      "schema_version": 4,
      "sha256": "[bundle sha256]",
      "rule_count": 55
    },
    "platform": "windows",
    "os_build": "26100",
    "elevated": true,
    "generated_at": "2026-01-01T00:00:00Z",
    "boot_time": {
      "state": "unmeasured",
      "reason": "read_failed"
    },
    "scan_tier": "standard",
    "anchors": [
      {
        "anchor": "install_date",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "setup_earliest_install",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "usn_journal_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "system_drive_root_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "recycle_bin_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_app_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_enhanced_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      }
    ]
  },
  "evidence": [
    {
      "rule_id": "72820eaf-1469-4ea7-bb0f-17f145d26dfc",
      "collector": "autostart",
      "strength": "posture",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "d7191cf3-ce56-480b-8501-66a198f83e08",
      "collector": "defender_exclusion",
      "strength": "posture",
      "state": "not_found",
      "retention": "Defender's exclusions as they were when the scan ran. An exclusion removed before the scan is not seen."
    },
    {
      "rule_id": "98f6e2b8-6d23-4202-bc7f-06587ebdd2f3",
      "collector": "driver_service",
      "strength": "posture",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "87a53c8f-b0e4-477d-91e7-93b904ba965f",
      "collector": "evtx",
      "strength": "tamper",
      "state": "found",
      "observations": [
        {
          "collector": "evtx",
          "fields": {
            "at_configured_path": false,
            "configured_path": "%SystemRoot%\\System32\\Winevt\\Logs\\Microsoft-Windows-LanguagePackSetup%4Operational.evtx",
            "entries": 17,
            "intact": true,
            "log": "Security.evtx",
            "max_size_bytes": 1052672,
            "newest_record_id": 17,
            "newest_record_time": "2018-08-03T06:44:06.4185334Z",
            "oldest_record_id": 1,
            "oldest_record_time": "2018-07-09T20:49:14.0577461Z",
            "path": "C:\\Windows\\System32\\winevt\\Logs\\Security.evtx",
            "read_only": false,
            "rejected": 0,
            "size_bytes": 69632
          }
        },
        {
          "collector": "evtx",
          "fields": {
            "at_configured_path": false,
            "configured_path": "%SystemRoot%\\System32\\Winevt\\Logs\\Microsoft-Windows-LanguagePackSetup%4Operational.evtx",
            "entries": 17,
            "intact": true,
            "log": "Application.evtx",
            "max_size_bytes": 1052672,
            "newest_record_id": 17,
            "newest_record_time": "2018-08-03T06:44:06.4185334Z",
            "oldest_record_id": 1,
            "oldest_record_time": "2018-07-09T20:49:14.0577461Z",
            "path": "C:\\Windows\\System32\\winevt\\Logs\\Application.evtx",
            "read_only": false,
            "rejected": 0,
            "size_bytes": 69632
          }
        }
      ]
    },
    {
      "rule_id": "2dc11b64-72a2-48f5-a273-985e906d5a9e",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "148cbcdd-8d18-4af6-a541-71cc7f21b2eb",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "53528a11-5af7-4e75-94bf-fca07eec6fcc",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "0999422f-8709-4d85-80e3-39410a85ed6b",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "d5531c55-1a65-4698-9f39-7cf79bbbb7ba",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "061797d3-161d-4783-89e6-caf658973436",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "282115fe-863d-4e2e-9cf5-4eaf8e7545e4",
      "collector": "fivem_dir",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "fd58dec6-84c1-49cb-806c-10b4614a046f",
      "collector": "install_marker",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "65ee0ec1-bcda-47a3-a401-98632b42e75f",
      "collector": "net_config",
      "strength": "posture",
      "state": "not_found",
      "retention": "The hosts file as it was when the scan ran. A line removed before the scan is not seen."
    },
    {
      "rule_id": "75162c70-a6d1-47ec-94af-be25184d5ece",
      "collector": "posture",
      "strength": "posture",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "98ee9213-39f3-4219-b2ac-f2bb3d21d6cc",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the PC was configured in the past."
    },
    {
      "rule_id": "e9f05cfb-6618-42ca-b4bf-f57f2e9ba8c7",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the account was configured in the past."
    },
    {
      "rule_id": "88eb2aca-a33e-414d-bd0f-cfb87af95a2d",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the PC was configured in the past."
    },
    {
      "rule_id": "869c34b6-7b32-4f56-a281-9f5ac00e43c4",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the account was configured in the past."
    },
    {
      "rule_id": "dc858978-954d-418f-a42e-29f06975f4ed",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "a4af8cdc-a009-42ee-8368-7f35e93051fe",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "d2f86e75-7692-468e-88a2-52eb1e24dc30",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "66d513b5-fe61-415a-9385-9d01f85c3ef5",
      "collector": "posture",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "1c73241b-b7f1-4f91-81d4-8de53db6d119",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "7996285e-8ccf-4b2d-8fec-339a32b95931",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "91dc8b45-8355-4554-8a6d-e979e4a95ecd",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "7d7adb92-2c47-4ff5-94ec-dd8a2f9e453d",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    }
  ],
  "own_traces": [],
  "unmatched": [],
  "scope": {
    "not_admin": 0,
    "not_attempted": 0,
    "not_consented": 1
  },
  "listed": {
    "found": 1,
    "not_found": 10,
    "unmeasured": 15
  },
  "hidden": {
    "not_found": 4,
    "unmeasured_expected": 14,
    "unmeasured_unexpected": 0,
    "unmatched": 14
  },
  "timeline": {
    "entries": [
      {
        "at": "2018-07-09T20:49:14.0577461Z",
        "collector": "evtx",
        "field": "oldest_record_time",
        "place": null,
        "source": {
          "kind": "evidence",
          "rule_id": "87a53c8f-b0e4-477d-91e7-93b904ba965f"
        },
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Security.evtx"
      },
      {
        "at": "2018-07-09T20:49:14.0577461Z",
        "collector": "evtx",
        "field": "oldest_record_time",
        "place": null,
        "source": {
          "kind": "evidence",
          "rule_id": "87a53c8f-b0e4-477d-91e7-93b904ba965f"
        },
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Application.evtx"
      },
      {
        "at": "2018-08-03T06:44:06.4185334Z",
        "collector": "evtx",
        "field": "newest_record_time",
        "place": null,
        "source": {
          "kind": "evidence",
          "rule_id": "87a53c8f-b0e4-477d-91e7-93b904ba965f"
        },
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Security.evtx"
      },
      {
        "at": "2018-08-03T06:44:06.4185334Z",
        "collector": "evtx",
        "field": "newest_record_time",
        "place": null,
        "source": {
          "kind": "evidence",
          "rule_id": "87a53c8f-b0e4-477d-91e7-93b904ba965f"
        },
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Application.evtx"
      },
      {
        "at": "2026-01-01T00:00:00Z",
        "collector": null,
        "field": "generated_at",
        "place": null,
        "source": {
          "kind": "anchor"
        },
        "subject": null
      }
    ],
    "bands": [
      {
        "collector": "evtx",
        "place": null,
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Security.evtx",
        "from": "2018-07-09T20:49:14.0577461Z",
        "to": "2018-08-03T06:44:06.4185334Z"
      },
      {
        "collector": "evtx",
        "place": null,
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Application.evtx",
        "from": "2018-07-09T20:49:14.0577461Z",
        "to": "2018-08-03T06:44:06.4185334Z"
      }
    ],
    "unmeasured": [
      {
        "collector": "bam",
        "reason": "source_absent"
      },
      {
        "collector": "fivem_dir",
        "reason": "read_failed"
      },
      {
        "collector": "pca",
        "reason": "read_failed"
      },
      {
        "collector": "prefetch",
        "reason": "source_absent"
      },
      {
        "collector": "usn",
        "reason": "read_failed"
      }
    ]
  },
  "collector_order": [
    "posture",
    "driver_service",
    "autostart",
    "defender_exclusion",
    "fivem_dir",
    "fivem_servers",
    "net_config",
    "process",
    "evtx",
    "prefetch",
    "bam",
    "pca",
    "usn"
  ],
  "trace_ages": {
    "anchors": [
      {
        "anchor": "boot_time",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "install_date",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "setup_earliest_install",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "usn_journal_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "system_drive_root_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "recycle_bin_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_app_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_enhanced_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      }
    ],
    "rows": [
      {
        "collector": "fivem_dir",
        "place": "legacy_logs",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_crashes",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_cache",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_server_cache",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_logs",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_crashes",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_launcher_crashes",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_server_cache",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "evtx",
        "subject": "Microsoft-Windows-CodeIntegrity%4Operational.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "evtx",
        "subject": "Microsoft-Windows-Windows Defender%4Operational.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "evtx",
        "subject": "Security.evtx",
        "state": "measured",
        "oldest": "2018-07-09T20:49:14.0577461Z",
        "days_before": 2732,
        "count": 17,
        "extra": {
          "max_size_bytes": 1052672,
          "size_bytes": 69632
        }
      },
      {
        "collector": "evtx",
        "subject": "System.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "prefetch",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "bam",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "pca",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "usn",
        "place": "journal",
        "state": "unmeasured",
        "reason": "read_failed"
      }
    ],
    "folded_logs": {
      "collector": "evtx",
      "logs": 1,
      "with_records": 1,
      "not_read": 0
    }
  }
}
